<resources>
    <string name="app_name">App FUOTA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sensor">Sensor</string>
    <string name="actuator">Actuator</string>
    <string name="timer">Timer</string>
    <string name="author">Author</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="grp_account">Account</string>
    <string name="change_password">Change password</string>
    <string name="humi">Humidity</string>
    <string name="temp">Temperature</string>
    <string name="ph">PH value</string>
    <string name="waterlevel">Water level</string>
    <string name="soilmosture">Soil Moisture</string>
    <string name="light">Light Sensor</string>
    <string name="namesensor">Name sensor</string>
    <string name="valsensor">Value Sensor</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="duration">Duration</string>
    <string name="usr">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="email">Email</string>
    <string name="reset_pass">Reset Password</string>
    <string name="no_network">No Network</string>
    <string name="no_internet_connection">Please make sure you are connected to an active network and try again</string>
    <string name="retry">Retry</string>
    <string name="aquaphonics">AquaPhonics</string>
    <string name="binhnguyen_mail">quangbinhlxcity@gmail.com</string>
    <string name="humidity">Humidity</string>
    <string name="todo">TODO</string>
    <string name="temperature">Temperature</string>
    <string name="water_levels">Water Levels</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="environment_monitor">Environment Monitor</string>
    <string name="water_quality_monitor">Water-Quality Monitor</string>
    <string name="environment">ENVIRONMENT</string>
    <string name="water">WATER</string>
    <string name="add_actuator">ADD_Actuator</string>
    <string name="for_environment">FOR ENVIRONMENT</string>
    <string name="for_fish">FOR FISH</string>
    <string name="description">Description</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_name_sensor_environment">Channel environment</string>
    <string name="channel_name_sensor_water">Channel water</string>
    <string name="channel_description">This is Channel 1</string>
    <string name="channel_description_environment">This is Channel environment</string>
    <string name="channel_description_water">This is Channel water</string>
    <string name="for_plant">FOR PLANT</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="empty">Empty</string>
    <string name="export">Export</string>
    <string name="history">History</string>
    <string name="FUOTA">Update Manage</string>
    <string name="version">Version</string>
    <string name="node_id">Node ID</string>
    <string name="device_id">Device ID</string>
    <string name="versionandroid_textsize">Versionandroid:textSize=</string>
    <string name="update">Update</string>
    <string name="dashboard">Dashboard</string>
    <string name="time_update">Time Update</string>
    <string name="device_status">device_status</string>
    <string name="time_start">Time Start</string>
</resources>