<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/active_sensor"
            android:title="@string/sensor"
            android:icon="@drawable/sensors"/>
        <item
            android:id="@+id/active_FUOTA"
            android:title="@string/FUOTA"
            android:icon="@drawable/relay"/>
    </group>
    <item android:id="@+id/nav_account"
        android:title="@string/grp_account">
        <menu>
            <item
                android:id="@+id/change_password"
                android:title="@string/change_password"
                android:icon="@drawable/lock_reset_24px" />
            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/logout_40px" />

        </menu>
    </item>
</menu>