<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SensorFragment"
    android:orientation="vertical"
    android:gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#ACFAAF"
        app:cardElevation="20dp"
        app:cardCornerRadius="30dp"
        android:layout_margin="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sensor_environment"
        android:text="@string/environment_monitor"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:background="@color/white"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerview_sensor_environment"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sensor_water"
        android:text="@string/water_quality_monitor"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/blue"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerview_sensor_water"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ToggleButton
        android:id="@+id/setMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/auto"
        android:textOn="@string/manual"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="40dp"/>

</LinearLayout>