<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ActuatorFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardCornerRadius="20sp"
            app:cardElevation="20dp"
            android:layout_margin="15sp"
            android:layout_gravity="fill"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15sp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_actuator_environment"
        android:text="@string/environment"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@color/white"
        />

                <TextView
                    android:id="@+id/tv_number_actuator_environment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3 device" />
            </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerview_adapter_environment"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardCornerRadius="20sp"
            app:cardElevation="20dp"
            android:layout_margin="15sp"
            android:layout_gravity="fill"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15sp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_actuator_water"
                        android:text="@string/water"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:background="@color/white"
                        android:padding="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3 device"
                        android:id="@+id/tv_number_actuator_water"/>
                </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerview_adapter_water"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_actuator"
        android:src="@drawable/add"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:backgroundTint="#B4BDFF"
        android:id="@+id/btn_add_actuator"/>

</FrameLayout>